tests/snapshots/change_operations_test__change_in_indented_context.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
    eart[h]world
