tests/snapshots/change_operations_test__ci_paren.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[u]nc(arg1, arg2)
