tests/snapshots/change_operations_test__ciw_and_repeat.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
Xworld X[t]est
