tests/snapshots/change_operations_test__ciw_and_undo.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[w]orld
