tests/snapshots/change_operations_test__ciw_from_middle.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:9
Lines: 1

Buffer:
helgoodby[e]world
