tests/snapshots/change_operations_test__ciw_inner_word.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello eart[h]test
