tests/snapshots/change_operations_test__ciw_single_char.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
alph[a]b c
