tests/snapshots/change_operations_test__cj_change_line_and_below.snap
---
source: tests/change_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 3

Buffer:
line [1]
line 2
line 3
